Update README and Analysis file

--- a/Analysis/analyze.ipynb
+++ b/Analysis/analyze.ipynb
@@ -82,14 +82,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "8454it [00:02, 4152.95it/s]"
+      "8377it [00:01, 4255.43it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Available functionals: ['Dataset', 'Reference', 'DSD-PBEPBE', 'B3LYP', 'CF22D', 'M062X', 'SOGGA11X', 'wB97M-V', 'wB97X-V', 'BMK', 'MGGA_MS2h', 'PBE0', 'CAMB3LYP', 'M052X', 'M08HX', 'MN15', 'PW6B95', 'r2SCAN0']\n"
+      "Available functionals: ['Dataset', 'Reference', 'wB97M2', 'B3LYP', 'BMK', 'CAMB3LYP', 'CF22D', 'M052X', 'M062X', 'M08HX', 'MN15', 'PBE0', 'PW6B95', 'SOGGA11X', 'r2SCAN0', 'wB97M-V', 'wB97X-V', 'revDSD-PBEP86-D4']\n"
      ]
     },
     {
@@ -103,11 +103,12 @@
    "source": [
     "# Load dataset information and molecular energies\n",
     "df_func = pd.read_excel(\"../Info/DatasetEval.xlsx\", header=0, index_col=0)\n",
+    "df_func = df_func[~df_func[\"Dataset\"].isin([\"SC74\", \"OEEFD\"])]\n",
     "df_energies = pd.read_excel(\"Molecule_Energies.xlsx\", index_col=0, header=0)\n",
     "funcs = df_energies.columns.tolist()\n",
     "\n",
     "# Convert reference energies from Hartree to kcal/mol\n",
-    "df_func[\"Reference\"] *= 627.509     \n",
+    "df_func[\"Reference\"] *= 627.50947406     \n",
     "\n",
     "# Calculate reaction energies for each functional\n",
     "print(\"Calculating reaction energies...\")\n",
@@ -131,7 +132,7 @@
     "            continue\n",
     "        \n",
     "        # Convert reaction energy from Hartree to kcal/mol\n",
-    "        df_func.at[idx, func] = reac_energy * 627.509\n",
+    "        df_func.at[idx, func] = reac_energy * 627.50947406\n",
     "\n",
     "# Clean up dataframe by removing stoichiometry column\n",
     "df_func.drop(columns=[\"Stoichiometry\"], inplace=True)\n",
@@ -157,7 +158,7 @@
      "output_type": "stream",
      "text": [
       "Incomplete datasets: []\n",
-      "Saved reaction energies for 8454 data points\n"
+      "Saved reaction energies for 8377 data points\n"
      ]
     }
    ],
@@ -235,7 +236,7 @@
     "    output = energy\n",
     "    \n",
     "    if input_in_kcal:\n",
-    "        output /= 627.509  # Convert kcal/mol to Hartree\n",
+    "        output /= 627.50947406  # Convert kcal/mol to Hartree\n",
     "    \n",
     "    output /= 2 * step_size  # Convert to dipole moment in atomic units\n",
     "    \n",
@@ -268,7 +269,7 @@
     "    output = energy\n",
     "    \n",
     "    if input_in_kcal:\n",
-    "        output /= 627.509  # Convert kcal/mol to Hartree\n",
+    "        output /= 627.50947406  # Convert kcal/mol to Hartree\n",
     "    \n",
     "    output /= step_size**2  # Convert to polarizability in atomic units\n",
     "    \n",
@@ -302,7 +303,7 @@
     "    \n",
     "    fc = energy\n",
     "    if input_in_kcal:\n",
-    "        fc /= 627.509  # Convert kcal/mol to Hartree\n",
+    "        fc /= 627.50947406  # Convert kcal/mol to Hartree\n",
     "    \n",
     "    signature = np.sign(fc)  # Preserve sign for imaginary frequencies\n",
     "    fc = np.abs(fc)  # Take absolute value for frequency calculation\n",
@@ -426,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -442,6 +443,7 @@
     "# Load error data and supporting information\n",
     "df_error = pd.read_excel(\"Results.xlsx\", index_col=0, header=0, sheet_name=\"errors\")\n",
     "TMC34_weight = pd.read_excel(\"../Info/DatasetEval.xlsx\", index_col=0, header=0, sheet_name=\"TMC34\")\n",
+    "O24x5_weight = pd.read_excel(\"../Info/DatasetEval.xlsx\", index_col=0, header=0, sheet_name=\"O24x5\")\n",
     "df_dataset_info = pd.read_excel(\"../Info/Datasets.xlsx\", header=0, index_col=0, sheet_name=\"Sheet1\")\n",
     "\n",
     "# Get list of functionals (exclude Reference and Dataset columns)\n",
@@ -459,10 +461,6 @@
     "\n",
     "# Calculate error metrics for each dataset\n",
     "for dataset, df_dataset in df_error.groupby(\"Dataset\"):\n",
-    "    # Skip problematic datasets\n",
-    "    if dataset in [\"SC74\", \"OEEFD\"]:\n",
-    "        continue\n",
-    "    \n",
     "    # Initialize dataset entries with datatype information\n",
     "    datatype = df_dataset_info.loc[dataset, \"Datatype\"]\n",
     "    df_rmse_sets[dataset] = {\"Datatype\": datatype}\n",
@@ -480,12 +478,12 @@
     "    \n",
     "    # Apply specialized metrics for specific datasets\n",
     "    # Mean Absolute Relative Error for polarizability and field-dependent datasets\n",
-    "    if dataset in [\"Pol130\", \"HR46\", \"T144\", \"OEEF\", \"OEEFD\"]:\n",
+    "    if dataset in [\"Pol130\", \"HR46\", \"T144\", \"OEEF\"]:\n",
     "        for func in funcs:\n",
     "            if func in df_error.columns:\n",
     "                df_metric_set[dataset][func] = np.mean(np.abs(df_dataset[func] / df_dataset[\"Reference\"]))\n",
     "    \n",
-    "    # Weighted error for TMC datasets (thermochemistry)\n",
+    "    # Weighted error for TMC datasets\n",
     "    if dataset in [\"TMD10\", \"MOR13\", \"TMB11\"]:\n",
     "        weight = TMC34_weight.loc[TMC34_weight[\"Dataset\"] == dataset, \"Weight\"].values\n",
     "        for func in funcs:\n",
@@ -493,6 +491,14 @@
     "                weighted_errors = np.abs(df_dataset[func]) * weight[:-1]\n",
     "                df_metric_set[dataset][func] = np.sum(weighted_errors) + weight[-1]\n",
     "    \n",
+    "    # Weighted error for O24x5 datasets\n",
+    "    if dataset in [\"O24\", \"O24x4\"]: # calculate weighted absolute error\n",
+    "        weight = O24x5_weight.loc[O24x5_weight[\"Dataset\"] == dataset, \"Weight\"].values\n",
+    "        for func in funcs:\n",
+    "            if func in df_error.columns:\n",
+    "                weighted_errors = np.abs(df_dataset[func]) * weight\n",
+    "                df_metric_set[dataset][func] = np.sum(weighted_errors)\n",
+    "\n",
     "    # Regularized MAE for dipole moments (normalized by max(|reference|, 1))\n",
     "    if dataset == \"Dip146\":\n",
     "        for func in funcs:\n",
@@ -540,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -601,11 +607,11 @@
       "- Statistical_errors.xlsx: Final performance ranking\n",
       "\n",
       "Top 5 performing functionals (lowest mean relative error):\n",
-      "1. wB97M-V: 1.077\n",
-      "2. CF22D: 1.250\n",
-      "3. wB97X-V: 1.320\n",
-      "4. M062X: 1.964\n",
-      "5. M052X: 1.970\n"
+      "1. wB97M2: 0.949\n",
+      "2. wB97M-V: 1.076\n",
+      "3. CF22D: 1.249\n",
+      "4. wB97X-V: 1.313\n",
+      "5. revDSD-PBEP86-D4: 1.522\n"
      ]
     }
    ],
@@ -645,6 +651,13 @@
     "    mean_error = df_errors.loc[\"Mean\", func]\n",
     "    print(f\"{i}. {func}: {mean_error:.3f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
